Defined the top position property to see if it will fix the sticky property which is not working.
There are two common scenarios where an element set to position: sticky; won’t actually stick to the window as intended:

No position property has been defined: Make sure the sticky element has top, bottom set. Or in the case of horizontal scrolling, left or right.)

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ h1{
 
 .mangouice-count.sticky {
   position: sticky;
+  top: 0;
 }
 
 
